kubernetes-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: springbootdockercomposemysql-service
  namespace: default
spec:
   ports:
     - port: 8084
       nodePort: 30011
   type: NodePort
   selector:
     app: springbootdockercomposemysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootdockercomposemysql-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springbootdockercomposemysql
  template:
    metadata:
      labels:
        app: springbootdockercomposemysql
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          valueFrom:
            configMapKeyRef:
              name: springboot-mysql-config
              key: mysql_host
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              name: mysecret
              key: username
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mysecret
              key: password
        name: springbootdockercomposemysql
        image: kumarmadisetty/springboot-docker-compose-mysql-app:1
        imagePullPolicy: Always
        ports:
          - containerPort: 8084
